--- a/locale/ro_RO.utf8/LC_MESSAGES/messages.po
+++ b/locale/ro_RO.utf8/LC_MESSAGES/messages.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Mule 0.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-11-06 12:30+0200\n"
-"PO-Revision-Date: 2013-11-06 12:32+0200\n"
+"POT-Creation-Date: 2013-11-06 14:56+0200\n"
+"PO-Revision-Date: 2013-11-06 14:58+0200\n"
 "Last-Translator: Cătălin Frâncu <cata@francu.com>\n"
 "Language-Team:  <cata@francu.com>\n"
 "Language: \n"
@@ -17,22 +17,109 @@ msgstr ""
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-SearchPath-0: .\n"
 
+#: www/index.php:5
+msgid "Home page"
+msgstr "Pagina principală"
+
+#: www/auth/login.php:23
+msgid "OpenID login"
+msgstr "conectare cu OpenID"
+
 #: lib/OpenID.php:40
 msgid "You have entered an invalid OpenID."
-msgstr "Ați introdus un OpenID invalid."
+msgstr "Ai introdus un OpenID invalid."
 
 #: lib/OpenID.php:61
 #: lib/OpenID.php:70
 msgid "We cannot redirect you to the OpenID server"
-msgstr "Nu vă putem redirecta către serverul de OpenID"
+msgstr "Nu te putem redirecta către serverul de OpenID"
 
 #: lib/OpenID.php:87
 msgid "OpenID login canceled."
-msgstr "Autentificare cu OpenID anulată."
+msgstr "conectare cu OpenID anulată."
 
 #: lib/OpenID.php:90
 msgid "OpenID login failed"
-msgstr "Autentificare cu OpenID eșuată."
+msgstr "conectare cu OpenID eșuată."
+
+#: templates_c/0e43cdfa3dcdc7a84f21705a7ebb3871488464ae.file.index.tpl.php:22
+msgid "Mule is working for you!"
+msgstr "Mule funcționează!"
+
+#: templates_c/1ae5997b760fb39edab10a98346bbe71026ee6ba.file.layout.tpl.php:67
+msgid "home"
+msgstr "acasă"
+
+#: templates_c/1ae5997b760fb39edab10a98346bbe71026ee6ba.file.layout.tpl.php:71
+msgid "logout"
+msgstr "deconectare"
+
+#: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:35
+msgid "login"
+msgstr "conectare"
+
+#: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:40
+msgid "If you have a Google or Yahoo account, you can use it as an OpenID:"
+msgstr "Dacă ai un cont de Google say Yahoo, îl poți folosi ca OpenID:"
+
+#: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:46
+msgid "Google account login"
+msgstr "Conectare cu contul Google"
+
+#: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:50
+msgid "Yahoo account login"
+msgstr "Conectare cu contul Yahoo"
+
+#: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:54
+msgid "What is OpenID?"
+msgstr "Ce este OpenID?"
+
+#: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:59
+msgid "OpenID logo"
+msgstr "logo OpenID"
+
+#: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:61
+msgid "is a faster, easier way to log in on the Internet."
+msgstr "este o modalitate mai rapidă și mai ușoară de a te autentifica pe Internet."
+
+#: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:67
+msgid "No need to create a new account on this site;"
+msgstr "Nu este nevoie să îți creezi un cont nou pe acest site;"
+
+#: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:69
+msgid "No need to remember yet another password;"
+msgstr "Nu este nevoie să memorezi o parolă în plus;"
+
+#: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:71
+msgid "Once created, an OpenID account can be reused on any website that accepts OpenIDs;"
+msgstr "Un cont OpenID, odată creat, poate fi refolosit pe orice site care acceptă OpenID;"
+
+#: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:73
+msgid "Chances are you already have an OpenID, because many popular sites (Google, Yahoo and others) act as OpenID providers."
+msgstr "Este posibil să ai deja un OpenID, deoarece multe site-uri populare (Google, Yahoo și altele) servesc ca furnizori de OpenID."
+
+#: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:77
+#, php-format
+msgid "You can read more on the %sOpenID website%s."
+msgstr "Poți citi mai multe informații pe %ssite-ul OpenID%s (în limba engleză)."
+
+#: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:80
+msgid "How do I obtain an OpenID?"
+msgstr "Cum obțin un OpenID?"
+
+#: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:83
+#, php-format
+msgid "Check %sthe list of OpenID providers%s."
+msgstr "Consultă %slista de furnizori de OpenID%s."
+
+#~ msgid "User %s obtained %d points."
+#~ msgstr "Utilizatorul %s a obținut %d puncte."
+
+#~ msgid "OpenId login"
+#~ msgstr "conectare cu OpenID"
+
+#~ msgid "Text to be localized"
+#~ msgstr "asdfg"
 
 #~ msgid "locale test English here"
 #~ msgstr "traducere în română aici ĂÂÎȘȚ€ß«»„”"
