--- a/locale/ro_RO.utf8/LC_MESSAGES/messages.po
+++ b/locale/ro_RO.utf8/LC_MESSAGES/messages.po
@@ -2,77 +2,78 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Mule 0.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-11-17 19:03+0200\n"
-"PO-Revision-Date: 2013-11-17 19:06+0200\n"
+"POT-Creation-Date: 2013-11-22 17:19+0200\n"
+"PO-Revision-Date: 2013-11-22 17:20+0200\n"
 "Last-Translator: Cătălin Frâncu <cata@francu.com>\n"
 "Language-Team:  <cata@francu.com>\n"
-"Language: \n"
+"Language: ro_RO\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop\n"
 "X-Poedit-Basepath: /home/cata/public_html/mule\n"
-"X-Poedit-Language: Romanian\n"
-"X-Poedit-Country: ROMANIA\n"
 "X-Poedit-SourceCharset: utf-8\n"
+"X-Generator: Poedit 1.5.4\n"
 "X-Poedit-SearchPath-0: .\n"
 
-#: www/index.php:5
-msgid "Home page"
-msgstr "Pagina principală"
-
-#: www/auth/openidReturn.php:16
-msgid "Please pick a username to complete your login."
-msgstr "Alege-ți un nume de utilizator pentru a completa conectarea."
-
-#: www/auth/account.php:36
-msgid "Could not find your OpenID; did you really log in?"
-msgstr "Nu ți-am putut găsi OpenID-ul; chiar te-ai conectat?"
-
-#: www/auth/account.php:49
-msgid "Changes saved."
-msgstr "Am salvat modificările."
-
-#: www/auth/account.php:57
+#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:29
+#: templates_c/1ae5997b760fb39edab10a98346bbe71026ee6ba.file.layout.tpl.php:74
+#: www/auth/account.php:58
 msgid "my account"
 msgstr "contul meu"
 
-#: www/auth/login.php:23
-msgid "OpenID login"
-msgstr "conectare cu OpenID"
+#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:35
+msgid "username"
+msgstr "nume de utilizator"
 
-#: lib/OpenID.php:40
-msgid "You have entered an invalid OpenID."
-msgstr "Ai introdus un OpenID incorect."
+#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:40
+msgid "choose a username"
+msgstr "alege-ți un nume de utilizator"
 
-#: lib/OpenID.php:61
-#: lib/OpenID.php:70
-msgid "We cannot redirect you to the OpenID server"
-msgstr "Nu te putem redirecta către serverul de OpenID"
+#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:42
+msgid "required; 3-20 characters including letters, digits, '-', '.' and '_'"
+msgstr "obligatoriu; 3-20 caractere incluzând litere, cifre, '-', '.' și '_'"
 
-#: lib/OpenID.php:87
-msgid "OpenID login canceled."
-msgstr "conectare cu OpenID anulată."
+#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:51
+msgid "name"
+msgstr "nume"
 
-#: lib/OpenID.php:90
-msgid "OpenID login failed"
-msgstr "conectare cu OpenID eșuată."
+#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:55
+msgid "enter your full name"
+msgstr "introdu numele tău complet"
 
-#: lib/model/User.php:26
-msgid "The username must be between 3 and 20 characters long and consist of letters, digits, '-', '.' and '_'."
-msgstr "Numele de utilizator trebuie să aibă între 3 și 20 de caractere și să constea din litere, cifre, '-', '.' și '_'"
+#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:57
+#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:68
+msgid "optional; 3-50 characters"
+msgstr "opțional; 3-50 caractere"
 
-#: lib/model/User.php:34
-msgid "This username is already in use."
-msgstr "Acest nume de utilizator este deja folosit."
+#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:62
+msgid "email"
+msgstr "e-mail"
 
-#: lib/model/User.php:41
-msgid "The email address is invalid."
-msgstr "Adresa de e-mail este incorectă."
+#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:66
+msgid "enter your email address"
+msgstr "introdu adresa de e-mail"
+
+#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:73
+msgid "save"
+msgstr "salvează"
+
+#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:80
+msgid "OpenID identities"
+msgstr "Identități OpenID"
+
+#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:94
+msgid "link another OpenID to this account"
+msgstr "leagă alt OpenID de acest cont"
 
 #: templates_c/0e43cdfa3dcdc7a84f21705a7ebb3871488464ae.file.index.tpl.php:22
 msgid "Mule is working for you!"
 msgstr "Mule funcționează!"
+
+#: templates_c/43b7a26b8d770177727b0901ecadf9b6f2c5636a.file.beginAuth.tpl.php:22
+msgid "Redirecting you to your OpenID provider..."
+msgstr "Te redirectăm către furnizorul de OpenID..."
 
 #: templates_c/1ae5997b760fb39edab10a98346bbe71026ee6ba.file.layout.tpl.php:67
 msgid "home"
@@ -81,6 +82,12 @@ msgstr "acasă"
 #: templates_c/1ae5997b760fb39edab10a98346bbe71026ee6ba.file.layout.tpl.php:71
 msgid "logout"
 msgstr "deconectare"
+
+#: templates_c/1ae5997b760fb39edab10a98346bbe71026ee6ba.file.layout.tpl.php:80
+#: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:27
+#: www/auth/login.php:22
+msgid "OpenID login"
+msgstr "conectare cu OpenID"
 
 #: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:35
 msgid "login"
@@ -108,7 +115,8 @@ msgstr "logo OpenID"
 
 #: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:61
 msgid "is a faster, easier way to log in on the Internet."
-msgstr "este o modalitate mai rapidă și mai ușoară de a te autentifica pe Internet."
+msgstr ""
+"este o modalitate mai rapidă și mai ușoară de a te autentifica pe Internet."
 
 #: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:67
 msgid "No need to create a new account on this site;"
@@ -119,17 +127,26 @@ msgid "No need to remember yet another password;"
 msgstr "Nu este nevoie să memorezi o parolă în plus;"
 
 #: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:71
-msgid "Once created, an OpenID account can be reused on any website that accepts OpenIDs;"
-msgstr "Un cont OpenID, odată creat, poate fi refolosit pe orice site care acceptă OpenID;"
+msgid ""
+"Once created, an OpenID account can be reused on any website that accepts "
+"OpenIDs;"
+msgstr ""
+"Un cont OpenID, odată creat, poate fi refolosit pe orice site care acceptă "
+"OpenID;"
 
 #: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:73
-msgid "Chances are you already have an OpenID, because many popular sites (Google, Yahoo and others) act as OpenID providers."
-msgstr "Este posibil să ai deja un OpenID, deoarece multe site-uri populare (Google, Yahoo și altele) servesc ca furnizori de OpenID."
+msgid ""
+"Chances are you already have an OpenID, because many popular sites (Google, "
+"Yahoo and others) act as OpenID providers."
+msgstr ""
+"Este posibil să ai deja un OpenID, deoarece multe site-uri populare (Google, "
+"Yahoo și altele) servesc ca furnizori de OpenID."
 
 #: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:77
 #, php-format
 msgid "You can read more on the %sOpenID website%s."
-msgstr "Poți citi mai multe informații pe %ssite-ul OpenID%s (în limba engleză)."
+msgstr ""
+"Poți citi mai multe informații pe %ssite-ul OpenID%s (în limba engleză)."
 
 #: templates_c/3f29a88fba6f6ee11c55037e03ce62e766365277.file.login.tpl.php:80
 msgid "How do I obtain an OpenID?"
@@ -140,46 +157,69 @@ msgstr "Cum obțin un OpenID?"
 msgid "Check %sthe list of OpenID providers%s."
 msgstr "Consultă %slista de furnizori de OpenID%s."
 
-#: templates_c/43b7a26b8d770177727b0901ecadf9b6f2c5636a.file.beginAuth.tpl.php:22
-msgid "Redirecting you to your OpenID provider..."
-msgstr "Te redirectăm către furnizorul de OpenID..."
+#: lib/OpenID.php:40
+msgid "You have entered an invalid OpenID."
+msgstr "Ai introdus un OpenID incorect."
 
-#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:33
-msgid "username"
-msgstr "nume de utilizator"
+#: lib/OpenID.php:61 lib/OpenID.php:70
+msgid "We cannot redirect you to the OpenID server"
+msgstr "Nu te putem redirecta către serverul de OpenID"
 
-#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:38
-msgid "choose a username"
-msgstr "alege-ți un nume de utilizator"
+#: lib/OpenID.php:87
+msgid "OpenID login canceled."
+msgstr "conectare cu OpenID anulată."
 
-#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:40
-msgid "required; 3-20 characters including letters, digits, '-', '.' and '_'"
-msgstr "obligatoriu; 3-20 caractere incluzând litere, cifre, '-', '.' și '_'"
+#: lib/OpenID.php:90
+msgid "OpenID login failed"
+msgstr "conectare cu OpenID eșuată."
 
-#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:49
-msgid "name"
-msgstr "nume"
+#: lib/model/User.php:26
+msgid ""
+"The username must be between 3 and 20 characters long and consist of "
+"letters, digits, '-', '.' and '_'."
+msgstr ""
+"Numele de utilizator trebuie să aibă între 3 și 20 de caractere și să "
+"constea din litere, cifre, '-', '.' și '_'"
 
-#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:53
-msgid "enter your full name"
-msgstr "introdu numele tău complet"
+#: lib/model/User.php:34
+msgid "This username is already in use."
+msgstr "Acest nume de utilizator este deja folosit."
 
-#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:55
-#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:66
-msgid "optional; 3-50 characters"
-msgstr "opțional; 3-50 caractere"
+#: lib/model/User.php:41
+msgid "The email address is invalid."
+msgstr "Adresa de e-mail este incorectă."
 
-#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:60
-msgid "email"
-msgstr "e-mail"
+#: www/index.php:5
+msgid "Home page"
+msgstr "Pagina principală"
 
-#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:64
-msgid "enter your email address"
-msgstr "introdu adresa de e-mail"
+#: www/auth/account.php:36
+msgid "Could not find your OpenID; did you really log in?"
+msgstr "Nu ți-am putut găsi OpenID-ul; chiar te-ai conectat?"
 
-#: templates_c/2567afdbe8d8cea54012848a55f14c8bc996bcf6.file.account.tpl.php:71
-msgid "save"
-msgstr "salvează"
+#: www/auth/account.php:49
+msgid "Changes saved."
+msgstr "Am salvat modificările."
+
+#: www/auth/openidReturn.php:17
+msgid "New OpenID linked to your account."
+msgstr "Noul OpenID a fost legat de contul tău."
+
+#: www/auth/openidReturn.php:19
+msgid "This OpenID is already linked to your account."
+msgstr "Acest OpenID este deja legat de contul tău."
+
+#: www/auth/openidReturn.php:21
+msgid ""
+"This OpenID is already linked to another account. We cannot merge accounts. "
+"Please close the other account before linking the OpenID to this one."
+msgstr ""
+"Acest OpenID este deja legat de alt cont. Sistemul nu poate uni conturi. Te "
+"rugăm să închizi celălalt cont înainte de a lega OpenID-ul de acesta."
+
+#: www/auth/openidReturn.php:31
+msgid "Please pick a username to complete your login."
+msgstr "Alege-ți un nume de utilizator pentru a completa conectarea."
 
 #~ msgid "User %s obtained %d points."
 #~ msgstr "Utilizatorul %s a obținut %d puncte."
